Fetch data from excel

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,19 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -77,7 +90,7 @@
 		<pluginManagement>
 			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
 			<plugins>
-			<!--
+				<!--
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -85,41 +98,41 @@
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>-->
-            <plugin>
-                <groupId>net.masterthought</groupId>
-                <artifactId>maven-cucumber-reporting</artifactId>
-                <version>5.7.6</version>
-                <executions>
-                    <execution>
-                        <id>execution</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <projectName>cucumber-jvm-example</projectName>
-                            <!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
-                            <skip>false</skip>
-                            <!-- output directory for the generated report -->
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <!-- optional, defaults to outputDirectory if not specified -->
-                            <inputDirectory>${project.build.directory}/jsonReports</inputDirectory>
-                            <jsonFiles>
-                                <!-- supports wildcard or name pattern -->
-                                <param>**/*.json</param>
-                            </jsonFiles>
-                            
-                            <parallelTesting>false</parallelTesting>
-                            <!-- optional, set true to group features by its Ids -->
-                            <mergeFeaturesById>false</mergeFeaturesById>
-                            <!-- optional, set true to get a final report with latest results of the same test from different test runs -->
-                            <mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
-                            <!-- optional, set true to fail build on test failures -->
-                            <checkBuildResult>false</checkBuildResult>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+				<plugin>
+					<groupId>net.masterthought</groupId>
+					<artifactId>maven-cucumber-reporting</artifactId>
+					<version>5.7.6</version>
+					<executions>
+						<execution>
+							<id>execution</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+							<configuration>
+								<projectName>cucumber-jvm-example</projectName>
+								<!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
+								<skip>false</skip>
+								<!-- output directory for the generated report -->
+								<outputDirectory>${project.build.directory}</outputDirectory>
+								<!-- optional, defaults to outputDirectory if not specified -->
+								<inputDirectory>${project.build.directory}/jsonReports</inputDirectory>
+								<jsonFiles>
+									<!-- supports wildcard or name pattern -->
+									<param>**/*.json</param>
+								</jsonFiles>
+
+								<parallelTesting>false</parallelTesting>
+								<!-- optional, set true to group features by its Ids -->
+								<mergeFeaturesById>false</mergeFeaturesById>
+								<!-- optional, set true to get a final report with latest results of the same test from different test runs -->
+								<mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
+								<!-- optional, set true to fail build on test failures -->
+								<checkBuildResult>false</checkBuildResult>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
@@ -159,11 +172,11 @@
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
-				
-				
+
+
 				<!-- Reporting -->
-				
-					
+
+
 			</plugins>
 		</pluginManagement>
 	</build>
